# carrel

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATE.md  mkdocs.yml  product.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: design-artist.md  (+4 more)
demo/: README.md  desk-tour.tape  pack.tape  redact-proof.tape
docs/: AGENTS.md  ARCHITECTURE.md  BRAND.md  BUILD_PLAN.md  CONFIGURATION.md  CONTRIBUTING.md  DECISIONS.md  ENVIRONMENT.md  FEATURES.md  HOW_THIS_WAS_BUILT.md  INSTALL.md  MARKETPLACE.md  PLUGIN_AUTHORING.md  QUICKSTART.md  REFERENCE.md  TEST_REPORT.md  TROUBLESHOOTING.md  VISION.md  index.md
scripts/: finalize.sh  rename_product.py  sync_product.py
snippets/: README.md  csv-to-report.sh  find-untagged.py  inbox-triage.sh  pack-repo-for-claude.sh  pdf-to-searchable.sh  redact-pii.sh  sign-and-verify.sh  watch-thumbs.sh
specs/: 00-core.md  01-convert.md  02-ocr.md  03-inspect-diff.md  04-edit.md  05-pack.md  06-index-search-tag-note.md  07-thumb-images-proof-color.md  08-watch-organize-dedupe.md  09-audiobook.md  10-redact-sign-form.md  11-desk-tui.md  12-marketplace-plugins.md  13-mcp-doctor.md  14-fixtures.md
tests/: conftest.py  test_audiobook.py  test_convert.py  test_core_adapters.py  test_core_cli.py  test_core_db.py  test_core_filetypes.py  test_core_textextract.py  test_desk.py  test_desk_db_cmds.py  test_diff.py  test_edit.py  test_images_cmds.py  test_inspect.py  test_marketplace.py  test_mcp_doctor.py  test_ocr.py  test_pack.py  test_product_sync.py  test_redact_sign_form.py  test_watch_org_dedupe.py
(+82 files in other folders)
